# ChessGUI

./: .gitignore  AGENTS.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CMakeLists.txt.user.1933d4e  CMakeLists.txt.user.fbe624f  DEPLOYMENT_CHECKLIST.md  PROJECT_STRUCTURE.md  README.md  SettingsDialog.ui  arrowoverlay.cpp  arrowoverlay.h  boardwidget.cpp  boardwidget.h  build.bat  build.sh  chessboard_detector.cpp  chessboard_detector.h  globalhotkeymanager.cpp  globalhotkeymanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  regionselector.cpp  regionselector.h  settingsdialog.cpp  settingsdialog.h  setup_dev.py  stealthmoveselector.cpp  stealthmoveselector.h  telemetrydashboard.cpp  telemetrydashboard.h  telemetrydashboardv2.cpp  telemetrydashboardv2.h  telemetrymanager.cpp  telemetrymanager.h  test_python.cpp
assets/: style.qss
python/: fen_server-slow.py  fen_server-working.py  fen_server-workingV2.py
python/fen_tracker/: main.py  play_move.py
python/fen_tracker/core/: game_state_tracker.py  turn_detector.py
